# vogix

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  TESTING.md  devenv.nix  devenv.yaml  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci-and-release.yml
crates/vogix-ontology/: Cargo.toml  README.md
crates/vogix-ontology/docs/: paper.md  report-design.md  report.html  report.json
crates/vogix-ontology/src/: explorer.rs  keybindings.rs  lib.rs  modes.rs  report.rs  report_spec.rs  shader_params.rs  surfaces.rs  theme_package.rs  validate_themes.rs  variants.rs  visualization.rs
docs/: architecture.md  cli.md  reload.md  theming.md
nix/lib/: vendor-praxis.nix
nix/modules/: hyprland-tests.nix  hyprland.nix  nixos.nix  openrgb.nix  vogix16-import.nix
nix/modules/appearance/: default.nix  defaults.nix  options.nix  tests.nix
nix/modules/applications/: bespec.nix  btop.nix  console.nix  wezterm.nix
nix/modules/behavior/: default.nix  defaults.nix  lib.nix  options.nix  tests.nix
nix/modules/behavior/generators/: help.nix  hyprland.nix  kanata.nix
nix/modules/hardware/: default.nix  dram-rgb.nix  keychron-k2-he.nix  kraken-elite.nix  motherboard.nix  options.nix
nix/modules/home-manager/: default.nix  options.nix  themes.nix
nix/modules/lib/: vogix16.nix
nix/vm/: README.md  home.nix
nix/vm/tests/: architecture.nix  cli.nix  input-engine.nix  keybindings-hyprland.nix  keybindings.nix  lib.nix  navigation.nix  scheme-switching.nix  session.nix  smoke.nix  state.nix  stress.nix  templates.nix  theme-switching.nix
scripts/: README.md  demo.sh
src/: cli.rs  engine.rs  errors.rs  history.rs  main.rs  reload.rs  scheme.rs  state.rs  symlink.rs
src/cache/: mod.rs  paths.rs  tests.rs
src/commands/: daemon.rs  input.rs  list.rs  mod.rs  modes.rs  refresh.rs  session.rs  shader.rs  status.rs  theme_change.rs
src/config/: mod.rs  tests.rs  types.rs
src/input/: catalog.rs  devfilter.rs  device.rs  engine.rs  health.rs  hypr.rs  keys.rs  mod.rs  paradigm.rs  schema.rs  taphold.rs
src/shader/: color.rs  generator.rs  hyprctl.rs  mod.rs
src/theme/: discovery.rs  mod.rs  palette.rs  query.rs  types.rs
src/theme/loader/: ansi16.rs  tests.rs  vogix16.rs
tests/fixtures/: vogix-input-overlay.json  vogix-input.json
