[workspace]
members = ["."]
resolver = "3"

[package]
name = "vogix"
version = "0.6.4"
edition = "2024"
authors = ["i-am-logger"]
description = "Runtime theme management for NixOS with the vogix16 design system"
license = "CC-BY-NC-SA-4.0"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Template rendering
tera = "1.20"

# System utilities
dirs = "5.0"
glob = "0.3"

# Error handling
thiserror = "2.0"

# Ontology-driven rule enforcement (github-pinned, hermetic for Nix).
# Pinned to the `pr4xis-v0.23.0` tag. The `[lints]` blocks are now inlined
# per-crate on master (the earlier `[lints] workspace = true` form broke
# crate2nix's vendor step — each crate unpacks into a separate /nix/store
# path with no workspace root, so the inheritance failed). Kept a git dep
# (not crates.io) because `pr4xis-domains` is `publish = false`; a tag pin
# cleanly absorbs the in-repo version skew (pr4xis 0.23.0, domains 0.22.0).
pr4xis = { git = "https://github.com/i-am-logger/pr4xis.git", tag = "pr4xis-v0.23.0" }
pr4xis-domains = { git = "https://github.com/i-am-logger/pr4xis.git", tag = "pr4xis-v0.23.0" }

# Date/time for state timestamps
chrono = "0.4"

# Signal handling
ctrlc = { version = "3.4", features = ["termination"] }
libc = "0.2"

# Sway IPC
swayipc = { version = "3.0", optional = true }

# evdev — grab the keyboard + emit via uinput for the input engine (Phase 2b)
evdev = "0.13"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.2"
proptest = "1.5"

[features]
default = []
sway = ["swayipc"]
