[workspace]
members = ["."]
resolver = "3"

[package]
name = "vogix"
version = "0.6.4"
edition = "2024"
authors = ["i-am-logger"]
description = "Runtime theme management for NixOS with the vogix16 design system"
license = "CC-BY-NC-SA-4.0"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Template rendering
tera = "1.20"

# System utilities
dirs = "5.0"
glob = "0.3"

# Error handling
thiserror = "2.0"

# Ontology-driven rule enforcement, pinned to praxis master @ rev 425a34f (=0.25.0).
# `pr4xis` IS on crates.io (0.25.0), but `pr4xis-domains` — which vogix needs for
# the input ontology — is still `publish = false` (its build-time `include_str!`
# of workspace files fails `cargo publish --verify`; see praxis release-plz.toml).
# So domains stays a git dep; and a git domains brings its path-dep `pr4xis` from
# the same workspace, so a crates.io `pr4xis` would duplicate the crate — hence
# both from git. buildRustPackage vendors the git workspace (resolving
# `version.workspace = true`), needing the outputHash in nix/packages/vogix.nix.
# Bump the rev to advance.
pr4xis = { git = "https://github.com/i-am-logger/pr4xis.git", rev = "425a34f898943c68a98f3901bd68039c52cf503d" }
pr4xis-domains = { git = "https://github.com/i-am-logger/pr4xis.git", rev = "425a34f898943c68a98f3901bd68039c52cf503d" }

# Date/time for state timestamps
chrono = "0.4"

# Signal handling
ctrlc = { version = "3.4", features = ["termination"] }
libc = "0.2"

# Sway IPC
swayipc = { version = "3.0", optional = true }

# evdev — grab the keyboard + emit via uinput for the input engine (Phase 2b)
evdev = "0.13"

# inotify — hotplug: grab keyboards reconnected after startup by watching
# /dev/input. Pure Rust (no libudev / pkg-config), so it builds free under
# crate2nix — unlike the libudev-based `udev` crate (vogix's first native-C link).
inotify = "0.11"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.2"
proptest = "1.5"

[features]
default = []
sway = ["swayipc"]
